--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "styled-components": "^5"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-select": "^2.1.6",
+    "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tooltip": "^1.1.8",
     "@radix-ui/themes": "^3.2.1",
     "@react-icons/all-files": "^4.1.0",
     "class-variance-authority": "^0.7.1",
