--- a/package.json
+++ b/package.json
@@ -6,37 +6,53 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "format": "npx prettier --write ."
   },
   "resolutions": {
     "styled-components": "^5"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.1.1",
     "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-separator": "^1.1.2",
-    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@radix-ui/themes": "^3.2.1",
     "@react-icons/all-files": "^4.1.0",
+    "@types/nprogress": "^0.2.3",
+    "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cookie": "^1.0.2",
+    "date-fn": "^0.0.2",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.5.0",
     "gsap": "^3.12.7",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.477.0",
+    "moment": "^2.30.1",
+    "moment-timezone": "^0.6.0",
     "next": "^15.2.0",
     "next-intl": "^3.26.5",
     "next-themes": "^0.4.4",
+    "nextjs-progressbar": "^0.0.16",
+    "nprogress": "^0.2.0",
     "ogl": "^1.0.11",
+    "puppeteer": "^24.10.2",
     "radix-ui": "^1.1.3",
     "react": "^19.0.0",
+    "react-day-picker": "^9.7.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.58.1",
     "react-icons": "^5.5.0",
     "styled-components": "^6.1.15",
     "tailwind-merge": "^3.0.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
